using SDL for sound playback

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_executable(rosmariokart.exe rosmariokart.cpp
   ../include/rosmariokart/rosmariokart.h)
-target_link_libraries(rosmariokart.exe ${catkin_LIBRARIES} ${OpenCV_LIBS})
+target_link_libraries(rosmariokart.exe ${catkin_LIBRARIES}
+  ${OpenCV_LIBS}  ${SDL2_LIBRARY} SDL2_mixer)
 
 add_executable(mip_animations.exe mip_animations.cpp)
 target_link_libraries(mip_animations.exe ${catkin_LIBRARIES} ${OpenCV_LIBS})
