--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,10 @@ project(rosmariokart)
 set(CMAKE_BUILD_TYPE RelWithDebInfo)
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra") # add extra warnings
 ### 3 - Find other CMake/Catkin packages needed for build
+set(CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake) # add "cmake" folder for "FindSDL2.cmake"
 find_package(catkin REQUIRED COMPONENTS roscpp cv_bridge image_transport)
 find_package( OpenCV REQUIRED )
+find_package(SDL2 REQUIRED)
 ### 4 - Message/Service/Action Generators (add_message_files(), add_service_files(), add_action_files())
 # nothing to do
 ### 5 - Invoke message/service/action generation (generate_messages())
@@ -18,10 +20,7 @@ catkin_package(
   CATKIN_DEPENDS roscpp cv_bridge image_transport
 )
 ### 7 - Libraries/Executables to build (add_library()/add_executable()/target_link_libraries())
-include_directories(
-  include
-  ${catkin_INCLUDE_DIRS}
-)
+include_directories( include ${catkin_INCLUDE_DIRS} ${SDL2_INCLUDE_DIR})
 ADD_SUBDIRECTORY(src)
 ### 8 - Tests to build (catkin_add_gtest())
 #~ ADD_SUBDIRECTORY(test)
