--- a/package.xml
+++ b/package.xml
@@ -13,6 +13,7 @@
   <depend>roscpp</depend>
   <depend>cv_bridge</depend>
   <depend>image_transport</depend>
+  <depend>sdl</depend>
   <export>
     <rosdoc config="rosdoc.yaml" /> <!-- http://wiki.ros.org/rosdoc_lite -->
   </export>
