--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,10 @@ before_install:
   - cd ..
   # install ROS
   - export ROS_DISTRO=indigo
-  - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu precise main" > /etc/apt/sources.list.d/ros-latest.list'
+  - sudo sh -c 'echo "deb http://packages.ros.org/ros/ubuntu trusty main" > /etc/apt/sources.list.d/ros-latest.list'
   - wget https://raw.githubusercontent.com/ros/rosdistro/master/ros.key -O - | sudo apt-key add -
   - sudo apt-get -qq update
-  - sudo apt-get install -y -qq ros-$ROS_DISTRO-ros-base  ros-$ROS_DISTRO-cv-bridge  ros-$ROS_DISTRO-image-transport  ros-$ROS_DISTRO-std-msgs
+  - sudo apt-get install -y -qq  ros-$ROS_DISTRO-ros-base python-catkin-pkg python-rosdep python-wstool
   - source /opt/ros/$ROS_DISTRO/setup.bash
 
 before_script: # Use this to prepare your build for testing e.g. copy database configurations, environment variables, etc.
