--- a/.travis.yml
+++ b/.travis.yml
@@ -26,6 +26,9 @@ before_install:
   - sudo apt-get -qq update
   - sudo apt-get install -y -qq  ros-$ROS_DISTRO-ros-base python-catkin-pkg python-rosdep python-wstool
   - source /opt/ros/$ROS_DISTRO/setup.bash
+  # Prepare rosdep to install dependencies.
+  - sudo rosdep init
+  - rosdep update
 
 before_script: # Use this to prepare your build for testing e.g. copy database configurations, environment variables, etc.
   # Create catkin workspace
